--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <div class="container">
     <h1>Manuelo Salumbides</h1>
     <p>Download or view my resume below:</p>
-    <a class="button" href="CV%20(1).pdf" target="_blank">📄 View Resume (PDF)</a>
+    <a class="button" href="Resume.pdf" target="_blank">📄 View Resume (PDF)</a>
   </div>
 </body>
 </html>
